...
      return;
    }
    setPage(page + 1);
    fetchEvents();
  };
  return (
    <View style={styles.container} testID='eventScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={eventList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
