...
        text='VideoLiveStreamBuffer'
        onPress={() => navigation.navigate('VideoLiveStreamBuffer')}
        testID='videoLiveStreamBufferEntityScreenButton'
      />
      <RoundedButton text='TopicInterest' onPress={() => navigation.navigate('TopicInterest')} testID='topicInterestEntityScreenButton' />
      <RoundedButton text='TodoList' onPress={() => navigation.navigate('TodoList')} testID='todoListEntityScreenButton' />
      <RoundedButton text='Event' onPress={() => navigation.navigate('Event')} testID='eventEntityScreenButton' />
      <RoundedButton text='BaseInfo' onPress={() => navigation.navigate('BaseInfo')} testID='baseInfoEntityScreenButton' />
      <RoundedButton text='Permission' onPress={() => navigation.navigate('Permission')} testID='permissionEntityScreenButton' />
      <RoundedButton text='ClassInfo' onPress={() => navigation.navigate('ClassInfo')} testID='classInfoEntityScreenButton' />
      <RoundedButton text='HistoryUpdate' onPress={() => navigation.navigate('HistoryUpdate')} testID='historyUpdateEntityScreenButton' />
      {/* jhipster-react-native-entity-screen-needle */}
    </ScrollView>
...
